# Spygraph

./: LICENSE  pyproject.toml
src/spygraph/: cli.py
src/spygraph/core/: __init__.py
src/spygraph/core/telegraph/: grapher.py
src/spygraph/core/webapi/: __init__.py  middleware.py  webapi.py
src/spygraph/utils/: __init__.py  secret.py
src/spygraph/workers/: api.py  logger.py  main.py  runner.py
tests/: test_api.py
