[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "spygraph"
dynamic = ["version"]
description = "SpyGraph - a tool for revealing the IP address of a target, using Telegra.ph"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "reekeer team" }
]

maintainers = [
  { name = "delewer", email = "del@reekeer.hidden" },
  { name = "oneq2", email = "oneq2@reekeer.hidden" }
]

keywords = ["telegra.ph", "telegram", "ipgrabber", "grabber", "osint"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "telegraph>=2.2.0",
  "requests>=2.31",
  "rich>=13.0",
  "fastapi>=0.135.1",
  "uvicorn[standard]>=0.41.0",
  "httpx>=0.28.1"
]

[project.urls]
Repository = "https://github.com/reekeer/spygraph"
Issues = "https://github.com/reekeer/spygraph/issues"

[project.scripts]
spygraph = "spygraph.cli:main"


[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pyright"
]

[tool.hatch.version]
path = "src/spygraph/__about__.py"

[tool.hatch.build]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spygraph"]

[tool.hatch.envs.default.scripts]
lint = "ruff check ."

[tool.ruff]
line-length = 140
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

ignore = [
  "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 140
target-version = ["py310"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false